[package]
name = "libcw"
description = "Core Wars runtime and parser"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
authors = ["Will Johnston"]

[features]
default = ["parser", "mars"]
parser = ["regex", "lazy_static"]
mars = []

[dependencies]
regex = { version = "0.2", optional = true}
lazy_static = { version = "0.2", optional = true}
